add external id to infra and upd docs
